syntax = "proto3";

package proto;

option go_package = "github.com/clintjedwards/gofer/proto/go";

import "gofer_message_api.proto";

// These protobufs contain protos used within the SDK. These models are usually
// inputs for the API, used by the extension(CLI in this case).

message UserPipelineConfig {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 parallelism = 4;
  repeated UserPipelineTaskConfig tasks = 5;
}

message UserPipelineTaskConfig {
  string id = 1;
  string description = 2;
  string image = 3;
  RegistryAuth registry_auth = 4;
  enum RequiredParentStatus {
    REQUIRED_PARENT_STATUS_UNKNOWN = 0;
    ANY = 1;
    SUCCESS = 2;
    FAILURE = 3;
  }
  map<string, RequiredParentStatus> depends_on = 5;
  map<string, string> variables = 6;
  repeated string entrypoint = 7;
  repeated string command = 8;
  bool inject_api_token = 9;
}
